--- a/main.css
+++ b/main.css
@@ -1,7 +1,3 @@
-.header {
-    padding-bottom: 20px;
-    margin-bottom: 20px;
-}
 
 .header > h3, h5 {
     margin: 0;
@@ -10,3 +6,34 @@
 }
 
 /* Include any custom CSS styling here! */
+
+.row {
+    align: center;
+}
+
+.text{
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+#buttons {
+    margin-left: 40%;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.col-lg-1 {
+    height:520px;
+    width:100%;
+    padding-bottom: 500px;
+}
+
+.col-lg-2 {
+    height:635px;
+    width:100%;
+}
+
+.col-lg-3 {
+    width:100%;
+    height:610px;
+}
